background, z-index correction

--- a/source/assets/stylesheets/components/_header.scss
+++ b/source/assets/stylesheets/components/_header.scss
@@ -102,7 +102,7 @@ li{
   transform: translate(-50%, -50%);
   width: 100%;
   text-align: center;
-  z-index: 1;;
+  z-index: 1;
 }
 
 .landing-text h1{
