--- a/source/assets/stylesheets/pages/_home.scss
+++ b/source/assets/stylesheets/pages/_home.scss
@@ -14,7 +14,7 @@ html {
 body {
   width: 100%;
   height: 100%;
-  // background: url("/assets/images/bg2.jpg") no-repeat center fixed;
+  background: url("/assets/images/bg.jpg") no-repeat center fixed;
   background-size: cover;
   background-color: #282242;
   color: #eee;
